# gottos

./: Makefile.am  configure.ac  gottos.pc.in
include/: Makefile.am  gottos.h
lib/: Makefile.am  gottos.c
module/: Makefile.am  gc.c  interface.h  malloc.c
test/: Makefile.am  gc.c  malloc.c
